# zju_course

./: README.md  实用推荐.md
Linux/: 更改linux用户名.md
习近平思想概论/: 2023习近平新时代中国特色社会主义思想概论学生手册.doc  README.md  浙江共同富裕示范区.md
乱七八糟/: code.ipynb
人工智能/: 人工智能引论考试范围.docx  黑白棋剪枝report.md
人工智能安全/: README.md
会计学/: README.md  第七章习题答案.docx  第五章习题答案.docx  第四章练习题答案（修改后）.doc
体育/: 14_网球选择题复习.docx
信息与电子工程导论/: 2023春回忆.docx  P1.ms10  README.md  实验报告模板.docx
军事理论/: 军理_2021-2022-2-吕-04 邓小平新时期军队建设思想.pptx
多媒体技术/: README.md
多媒体技术/ZJU_multimedia-main/Proj/code/: CMakeLists.txt  decode2708.cpp  encode2708.cpp  huffman.cpp  utils.cpp
大学物理实验/: README.md  等厚干涉不确定度处理.txt
大学英语IV/: quiz以及final题型.docx  人相关.docx  错词.docx
宏观经济学（甲）/: 2022-2023秋冬学期宏经相关要求.doc
工程原理/: 对流换热研究.ppt  工程原理复习提纲2023.docx  工程原理第二十三章.ppt  工程原理第二十章 .ppt  第1讲（第1&7章）.pptx  第2讲（第2章）.pptx  第3讲（第3-6章）.pptx
工程图学/: README.md  章2.ppt  章3、4.ppt  章5.ppt  章6.ppt
形势与政策I/: 【专题】建团100周年.pptx  形势与政策课后思考.docx  期末考试复习.docx
微观经济学（甲）/: README.md  微观经济学(甲)（A）（20070115）.doc  微观经济学(甲)（A）（原版）.doc  微观经济学(甲)（B）（20070115）.doc  微观经济学(甲)（B）（原版）.doc
思想道德与法治/: README.md  《思想道德与法治(2021版)》绪论知识点及练习题.docx  《思想道德与法治（2021版）》第二章知识点及练习题.docx  思修期末.doc
操作系统/: OS复习笔记v2.docx  myA4.docx  notebook.md
政治经济学/: 课程要求.docx
数值分析/: 0考试题型.pptx  20秋冬.docx  21秋冬.docx  README.md
数字逻辑设计/: README.md
数学建模/: README.md
数据库系统/: 2022期末.doc  A4 hjh.docx  README.md  ch14 - Indexing.ppt
概率论与数理统计/: README.md  zmz第七章.ppt  zmz第六章.ppt  概率论复习 (1).ppt  概率论复习（2）.ppt
毛泽东思想与中国特色社会主义概论/: README.md  习概历年卷.docx  伏佳佳期末辅导.pptx  考研政治大纲.md
社会主义发展史/: README.md  社会主义发展史笔记.docx
轮式/框架/course_agv_icp/: CMakeLists.txt
轮式/框架/course_agv_icp/launch/: icp.launch
轮式/框架/course_agv_icp/scripts/: odometry.py
轮式/框架/course_agv_icp/src/: icp.cpp
轮式机器人/框架/course_agv_icp/: package.xml
轮式机器人/框架/course_agv_icp/launch/: course_agv.rviz
轮式机器人/框架/course_agv_icp/scripts/: icp.py
轮式机器人/框架/course_agv_icp/src/: tf.cpp
(+1773 files in other folders)
